# musclemetric-ai

./: .gitignore  README.md  app.py  pyproject.toml
schemas/: analysis.py
services/: openai_analysis.py
static/: analysis.css  analysis.js  main.css  main.js
templates/: analysis.html  index.html
utils/: config.py  file_utils.py
