[project]
name = "musclemetrics-ai"
version = "0.1.0"
description = "AI-powered physique analysis web app using structured outputs and visual-only assessment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "gunicorn>=25.3.0",
    "openai>=2.32.0",
    "python-dotenv>=1.2.2",
    "werkzeug>=3.1.8",
]
